--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   provider: ^6.1.1
 
   go_router: ^13.0.0
+
+  tflite_flutter: ^0.9.0
+  sqflite_sqlcipher: ^3.4.0
+  path: ^1.9.0
+  flutter_secure_storage: ^9.0.0
   
   # Local Storage (Person B will use these)
   hive: ^2.2.3
