--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
 
   go_router: ^13.0.0
 
-  tflite_flutter: ^0.9.0
   sqflite_sqlcipher: ^3.4.0
   path: ^1.9.0
   flutter_secure_storage: ^9.0.0
@@ -52,6 +51,7 @@ dependencies:
   
   # Utils
   intl: ^0.18.1  # Date formatting
+  tflite_flutter: 0.12.1
 
 dev_dependencies:
   flutter_test:
@@ -108,3 +108,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
+
+# подключение картинки овечки на поле для diary_screen
+  assets:
+    - assets/images/sheep_diary_bg.jpg
